chore: style improvements, added spacing classes for body, fixed dropdown

--- a/scss/partials/ai-card-button.scss
+++ b/scss/partials/ai-card-button.scss
@@ -14,6 +14,7 @@
         border-radius: 8px;
         border: 1px solid $lernplattform-400;
         background: $lernplattform-200;
+        text-decoration: none;
 
         transition: background-color ease-in-out 0.5s;
     }
