--- a/scss/partials/ai-card-input.scss
+++ b/scss/partials/ai-card-input.scss
@@ -1,6 +1,6 @@
 .tiny_ai-input-container {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     border: 1px solid $neutral-grey-100;
     border-radius: 8px;
     padding: 10px;
