--- a/scss/partials/ai-modal.scss
+++ b/scss/partials/ai-modal.scss
@@ -12,6 +12,7 @@
 
     .modal-content {
         border: none;
+        overflow: visible!important;
     }
 
     .tiny_ai-modal--header {
@@ -42,10 +43,24 @@
     }
 
     [data-region="body"] {
-        display: flex;
-        padding: 8px 24px 0px 24px;
-        flex-direction: column;
-        gap: 24px;
+        overflow-y: visible!important;
+
+        :first-child[id^="tiny_ai_"] {
+            display: flex;
+            padding: 8px 24px 0px 24px;
+            flex-direction: column;
+
+            &.tiny_ai_wrapper-l {
+                gap: 24px;
+            }
+            &.tiny_ai_wrapper-m {
+                gap: 16px;
+            }
+            &.tiny_ai_wrapper-s {
+                gap: 10px;
+            }
+            
+        }
 
         .tiny_ai-modal--button-wrapper {
             display: flex;
